# ara-libsra

./: .gitexternals  meson.build  meson_options.txt
include/: meson.build
include/freertos/: meson.build
include/freertos/arm/: meson.build
include/freertos/i386/: meson.build
include/platform/: meson.build
include/sra/: meson.build
settings/: meson.build
sra/: meson.build
sra/arm/: meson.build
sra/generic/: meson.build
subprojects/: .gitignore  ara-libplatforms.wrap
