option('arch', type: 'combo', choices: ['arm', 'i386'], value: 'arm', yield: true,
    description: 'Set the architecture for which the test applications are built.')
option('arm_include_dirs', type: 'array', value: ['/usr/lib/arm-none-eabi/include'], yield: true,
    description: 'A list of include dirs for compiling for ARM. Only relevant, if arch==arm.')
option('arm_link_dirs', type: 'array', value: ['/usr/lib/arm-none-eabi/newlib/thumb/v7-m/nofp/'], yield: true,
    description: 'A list of link dirs for compiling for ARM. Only relevant, if arch==arm. (Sometimes need to remove trailing nofp/')
option('arm_gcc_version', type: 'string', value: 'default', yield: true,
    description: 'The version of the GCC cross compiler for ARM. The special value of "default" assumes the same version like the system GCC. Only relevant, if arch==arm.')
option('arm_gcc_dir', type: 'string', value: '/usr/lib/gcc/arm-none-eabi/@0@/thumb/v7-m/nofp/', yield: true,
    description: 'The path to the GCC ARM toolchain. Note that @0@ is replaced with the arm_gcc_version. Only relevant, if arch==arm. (Sometimes need to remove trailing nofp/)')